fix(segmented control): Fixed bug in Vue

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -9,14 +9,14 @@
         [items]="[{ name: 'Different' }, { name: 'Length' }, { name: 'Woords' }]"
         (valueOnChange)="logValue('Segmented', $event.detail.value)"
       ></elvia-segmented-control>
-      <elvia-segmented-control
+      <!-- <elvia-segmented-control
         [type]="'icon'"
         [items]="[
           { name: 'thumbnail', ariaLabel: 'Helo' },
           { name: 'list', ariaLabel: 'HEElo' }
         ]"
         (valueOnChange)="logValue('Segmented', $event.detail.value)"
-      ></elvia-segmented-control>
+      ></elvia-segmented-control> -->
     </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
