feat(elvis): deprecated segmented control class

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -4,20 +4,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <elvia-segmented-control
-        [items]="[{ name: 'Different' }, { name: 'Length' }, { name: 'Woords' }]"
-        (valueOnChange)="logValue('Segmented', $event.detail.value)"
-      ></elvia-segmented-control>
-      <!-- <elvia-segmented-control
-        [type]="'icon'"
-        [items]="[
-          { name: 'thumbnail', ariaLabel: 'Helo' },
-          { name: 'list', ariaLabel: 'HEElo' }
-        ]"
-        (valueOnChange)="logValue('Segmented', $event.detail.value)"
-      ></elvia-segmented-control> -->
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
@@ -324,12 +311,18 @@
   <!--Segmented control-->
   <div class="example-wrapper">
     <h3>Segmented control</h3>
-    <!-- <elvia-segmented-control
-      [type]="'icon'"
-      [items]="['thumbnail', 'list']"
-      value="1"
+    <elvia-segmented-control
+      [items]="[{ name: 'Different' }, { name: 'Length' }, { name: 'Woords' }]"
       (valueOnChange)="logValue('Segmented', $event.detail.value)"
-    ></elvia-segmented-control> -->
+    ></elvia-segmented-control>
+    <elvia-segmented-control
+      [type]="'icon'"
+      [items]="[
+        { name: 'thumbnail', ariaLabel: 'Helo' },
+        { name: 'list', ariaLabel: 'HEElo' }
+      ]"
+      (valueOnChange)="logValue('Segmented', $event.detail.value)"
+    ></elvia-segmented-control>
   </div>
 
   <!--Slider-->
