--- a/packages/elvis/src/components/form/field.scss
+++ b/packages/elvis/src/components/form/field.scss
@@ -73,15 +73,15 @@
 
   &.e-form-field--compact {
     position: relative;
-    padding-top: 8px;
+    padding-top: 9px;
     .e-form-field__label {
       position: absolute;
       z-index: 1;
-      top: 0;
+      top: 1px;
       left: 8px;
       background-color: colors.color('elvia-on');
-      padding: 0 3px;
-      height: 9px;
+      padding: 0 3px 1px;
+      height: 10px;
 
       font-family: 'Red Hat Text', Verdana, sans-serif;
       font-weight: 500;
