--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -2781,6 +2781,16 @@ input:focus {
   border-color: #676767;
 }
 
+@property --loading-angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+@keyframes loadingAnimation {
+  to {
+    --loading-angle: 180deg;
+  }
+}
 .e-input {
   max-width: 448px;
   width: 100%;
@@ -2866,11 +2876,24 @@ input:focus {
   border-color: #bdbdbd;
   cursor: not-allowed;
 }
-.e-input.e-input---readonly > input, .e-input.e-input---readonly > input:focus, .e-input.e-input---readonly > input:read-only, .e-input.e-input---readonly > input:read-only:focus {
+.e-input.e-input---readonly > input,
+.e-input.e-input---readonly > input:focus,
+.e-input.e-input---readonly > input:read-only,
+.e-input.e-input---readonly > input:read-only:focus {
   background: #fafafa;
   border: unset;
   color: #515151;
   padding: 12px 16px;
+}
+.e-input.e-input---loading > input:not(:focus),
+.e-input.e-input---loading > textarea:not(:focus) {
+  padding: 11px 15px;
+  border: double 2px transparent;
+  border-radius: 4px;
+  background-image: linear-gradient(#fff, #fff), linear-gradient(var(--loading-angle), #29d305, transparent, #29d305);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  animation: 2s loadingAnimation cubic-bezier(0.95, 0.05, 0.05, 0.95) infinite;
 }
 .e-input input[type=date]::-webkit-calendar-picker-indicator,
 .e-input input[type=time]::-webkit-calendar-picker-indicator {
@@ -2922,7 +2945,10 @@ input:focus {
   border: 2px solid #29d305;
   padding: 3px 9px;
 }
-.e-form-field.e-form-field--compact .e-input.e-input---readonly > input, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:focus, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only:focus,
+.e-form-field.e-form-field--compact .e-input.e-input---readonly > input,
+.e-form-field.e-form-field--compact .e-input.e-input---readonly > input:focus,
+.e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only,
+.e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only:focus,
 .e-input.e-input--compact.e-input---readonly > input,
 .e-input.e-input--compact.e-input---readonly > input:focus,
 .e-input.e-input--compact.e-input---readonly > input:read-only,
@@ -2930,6 +2956,12 @@ input:focus {
   background: #fafafa;
   border: unset;
   color: #515151;
+  padding: 3px 9px;
+}
+.e-form-field.e-form-field--compact .e-input.e-input---loading > input,
+.e-form-field.e-form-field--compact .e-input.e-input---loading > textarea,
+.e-input.e-input--compact.e-input---loading > input,
+.e-input.e-input--compact.e-input---loading > textarea {
   padding: 3px 9px;
 }
 .e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon,
@@ -7811,16 +7843,16 @@ input:focus {
 }
 .e-form-field.e-form-field--compact {
   position: relative;
-  padding-top: 8px;
+  padding-top: 9px;
 }
 .e-form-field.e-form-field--compact .e-form-field__label {
   position: absolute;
   z-index: 1;
-  top: 0;
+  top: 1px;
   left: 8px;
   background-color: #fff;
-  padding: 0 3px;
-  height: 9px;
+  padding: 0 3px 1px;
+  height: 10px;
   font-family: "Red Hat Text", Verdana, sans-serif;
   font-weight: 500;
   font-size: 10px;
