speed up animation, make transparent part larger

--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -2890,10 +2890,10 @@ input:focus {
   padding: 11px 15px;
   border: double 2px transparent;
   border-radius: 4px;
-  background-image: linear-gradient(#fff, #fff), linear-gradient(var(--loading-angle), #29d305, transparent, #29d305);
+  background-image: linear-gradient(#fff, #fff), linear-gradient(var(--loading-angle), #29d305, transparent 40%, transparent 60%, #29d305);
   background-origin: border-box;
   background-clip: padding-box, border-box;
-  animation: 2s loadingAnimation cubic-bezier(0.95, 0.05, 0.05, 0.95) infinite;
+  animation: 1.7s loadingAnimation cubic-bezier(0.95, 0.05, 0.05, 0.95) infinite;
 }
 .e-input input[type=date]::-webkit-calendar-picker-indicator,
 .e-input input[type=time]::-webkit-calendar-picker-indicator {
