--- a/packages/components/components/elvis-popover/src/react/style.scss
+++ b/packages/components/components/elvis-popover/src/react/style.scss
@@ -6,6 +6,15 @@ $green: #29d305;
 $grey-10: #e9e9e9;
 $grey-05: #f4f4f4;
 
+$html-font-size: 16px;
+@function stripUnit($value) {
+  @return $value / ($value * 0 + 1);
+}
+
+@function rem($pxValue) {
+  @return #{stripUnit($pxValue) / stripUnit($html-font-size)}rem;
+}
+
 .ewc-no-outline,
 .ewc-no-outline * {
   outline: none !important;
@@ -101,7 +110,7 @@ $grey-05: #f4f4f4;
       margin: 0;
       padding: 0;
       font-family: 'Red Hat Text', Verdana, sans-serif;
-      font-size: 14px;
+      font-size: rem(14px);
       font-weight: 500 !important;
       letter-spacing: 0px;
       line-height: 22px;
@@ -112,8 +121,8 @@ $grey-05: #f4f4f4;
     .ewc-popover__text {
       font-family: 'Red Hat Text', Verdana, sans-serif;
       font-weight: normal;
-      font-size: 14px;
       line-height: 22px;
+      font-size: rem(14px);
     }
   }
 
