--- a/packages/elvis/src/components/button.scss
+++ b/packages/elvis/src/components/button.scss
@@ -16,19 +16,19 @@ $button-extra-border-hover: 1px;
 $button-lg-padding-y: 12px;
 $button-lg-padding-x: 32px;
 $button-lg-padding: $button-lg-padding-y $button-lg-padding-x;
-$button-lg-font-size: 18px;
+$button-lg-font-size: helpers.toRem(18);
 $button-lg-line-height: 24px;
 
 $button-md-padding-y: 10px;
 $button-md-padding-x: 24px;
 $button-md-padding: $button-md-padding-y $button-md-padding-x;
-$button-md-font-size: 16px;
+$button-md-font-size: helpers.toRem(16);
 $button-md-line-height: 20px;
 
 $button-sm-padding-y: 8px;
 $button-sm-padding-x: 16px;
 $button-sm-padding: $button-sm-padding-y $button-sm-padding-x;
-$button-sm-font-size: 14px;
+$button-sm-font-size: helpers.toRem(14);
 $button-sm-line-height: 16px;
 
 $loading-dot-lg: 12px;
