--- a/packages/elvis/src/components/form/checkbox.scss
+++ b/packages/elvis/src/components/form/checkbox.scss
@@ -45,7 +45,7 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
     width: fit-content;
 
     font-family: 'Red Hat Text', Verdana, sans-serif;
-    font-size: 16px;
+    font-size: helpers.toRem(16);
     line-height: 24px;
     font-weight: 400;
     color: colors.color('font-color');
