--- a/packages/elvis/src/components/form/field.scss
+++ b/packages/elvis/src/components/form/field.scss
@@ -1,6 +1,7 @@
 @use '../../variables/colors.scss';
 @use '../../variables/typography';
 @use '../../utilities/icons.scss';
+@use '../../utilities/helpers';
 
 .e-form-field {
   // Variable containing '&' to jump to current parent inside a child class.
@@ -15,6 +16,7 @@
     display: block;
     margin-bottom: 5px;
     @include typography.typography('text-label');
+    line-height: 28px;
     color: colors.color('font-color');
     text-align: left;
 
@@ -85,13 +87,13 @@
 
       font-family: 'Red Hat Text', Verdana, sans-serif;
       font-weight: 500;
-      font-size: 10px;
-      line-height: 100%;
+      font-size: helpers.toRem(10);
+      line-height: 10px;
     }
     .e-form-field__error {
       margin-top: 4px;
       font-family: 'Red Hat Text', Verdana, sans-serif;
-      font-size: 12px;
+      font-size: helpers.toRem(12);
       line-height: 16px;
     }
 
