--- a/packages/elvis/src/components/stepper.scss
+++ b/packages/elvis/src/components/stepper.scss
@@ -17,7 +17,7 @@
     &-number {
       font-family: 'Red Hat Display', Verdana, sans-serif;
       font-weight: 700;
-      font-size: 18px;
+      font-size: helpers.toRem(18);
       line-height: 22px;
       color: colors.color('font-color');
       cursor: pointer;
@@ -72,7 +72,7 @@
   &__title {
     font-family: 'Red Hat Display', Verdana, sans-serif;
     font-weight: 700;
-    font-size: 24px;
+    font-size: helpers.toRem(24);
     line-height: 29px;
 
     display: flex;
@@ -103,7 +103,7 @@
         .e-stepper__step-title {
           display: flex;
           font-family: 'Red Hat Text', Verdana, sans-serif;
-          font-size: 16px;
+          font-size: helpers.toRem(16);
           line-height: 28px;
 
           margin-left: 16px;
@@ -118,7 +118,7 @@
       &.e-stepper__step--active .e-stepper__step-title {
         font-family: 'Red Hat Display', Verdana, sans-serif;
         font-weight: 700;
-        font-size: 24px;
+        font-size: helpers.toRem(24);
         line-height: 29px;
       }
       &:last-of-type .e-stepper__content {
