--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.scss
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.scss
@@ -19,7 +19,7 @@ h1 {
 }
 h3 {
   font-family: 'Red Hat Display', Verdana, sans-serif;
-  font-size: 22px;
+  font-size: 1.375rem;
   margin-bottom: 32px;
 }
 ul {
